# alphafold3_google

./: CMakeLists.txt  README.md  WEIGHTS_PROHIBITED_USE_POLICY.md  WEIGHTS_TERMS_OF_USE.md  dev-requirements.txt  download.sh  fetch_databases.py  fetch_databases.sh  job.sh  pyproject.toml  requirements.txt  requirements1.txt  run_alphafold.py  run_alphafold_data_test.py  run_alphafold_test.py
docker/: Dockerfile  dockerignore
docs/: contributing.md  input.md  installation.md  known_issues.md  output.md  performance.md
src/alphafold3/: __init__.py  build_data.py  cpp.cc  version.py
src/alphafold3/.github/workflows/: ci.yaml
src/alphafold3/common/: base_config.py  folding_input.py  resources.py
src/alphafold3/common/testing/: data.py
src/alphafold3/constants/: atom_types.py  chemical_component_sets.py  chemical_components.py  mmcif_names.py  periodic_table.py  residue_names.py  side_chains.py
src/alphafold3/constants/converters/: ccd_pickle_gen.py  chemical_component_sets_gen.py
src/alphafold3/data/: featurisation.py  msa.py  msa_config.py  msa_features.py  msa_identifiers.py  msa_store.py  parsers.py  pipeline.py  structure_stores.py  template_realign.py  template_store.py  templates.py
src/alphafold3/data/cpp/: msa_profile_pybind.cc  msa_profile_pybind.h
src/alphafold3/data/tools/: hmmalign.py  hmmbuild.py  hmmsearch.py  jackhmmer.py  msa_tool.py  nhmmer.py  rdkit_utils.py  subprocess_utils.py
src/alphafold3/jax/attention/: attention.py  attention_base.py  attention_call_arg_specs.py  flash_attention.py  xla_attention.py
src/alphafold3/jax/common/: array_view.py  precision.py  triton_utils.py
src/alphafold3/jax/gated_linear_unit/: block.py  gated_linear_unit.py  gated_linear_unit_base.py  matmul_config.py  matmul_ext.py
src/alphafold3/jax/geometry/: __init__.py  rigid_matrix_vector.py  rotation_matrix.py  struct_of_array.py  utils.py  vector.py
src/alphafold3/model/: confidence_types.py  confidences.py  data3.py  data_constants.py  feat_batch.py  features.py  merging_features.py  mkdssp_pybind.cc  mkdssp_pybind.h  mmcif_metadata.py  model.py  model_config.py  msa_pairing.py  params.py  post_processing.py  protein_data_processing.py
src/alphafold3/model/atom_layout/: atom_layout.py
src/alphafold3/model/components/: base_model.py  haiku_modules.py  mapping.py  utils.py
src/alphafold3/model/diffusion/: atom_cross_attention.py  confidence_head.py  diffusion_head.py  diffusion_transformer.py  distogram_head.py  featurization.py  model.py  modules.py  template_modules.py
src/alphafold3/model/network/: alphafold3.py  atom_cross_attention.py  confidence_head.py  diffusion_head.py  evoformer.py  modules.py  template_modules.py
src/alphafold3/model/pipeline/: inter_chain_bonds.py  pipeline.py  structure_cleaning.py
src/alphafold3/model/scoring/: alignment.py  covalent_bond_cleaning.py  scoring.py
src/alphafold3/parsers/cpp/: cif_dict.pyi  cif_dict_lib.cc  cif_dict_lib.h  cif_dict_pybind.cc  cif_dict_pybind.h  fasta_iterator.pyi  fasta_iterator_lib.cc  fasta_iterator_lib.h  fasta_iterator_pybind.cc  fasta_iterator_pybind.h  msa_conversion.pyi  msa_conversion_pybind.cc  msa_conversion_pybind.h
src/alphafold3/scripts/: copy_to_ssd.sh  gcp_mount_ssd.sh
src/alphafold3/structure/: __init__.py  bioassemblies.py  bonds.py  chemical_components.py  mmcif.py  parsing.py  sterics.py  structure.py  structure_tables.py  table.py  test_utils.py
src/alphafold3/structure/cpp/: aggregation.pyi  aggregation_pybind.cc  aggregation_pybind.h  membership.pyi  membership_pybind.cc  membership_pybind.h  mmcif_altlocs.cc  mmcif_altlocs.h  mmcif_atom_site.pyi  mmcif_atom_site_pybind.cc  mmcif_atom_site_pybind.h  mmcif_layout.h  mmcif_layout.pyi  mmcif_layout_lib.cc  mmcif_layout_pybind.cc  mmcif_layout_pybind.h  mmcif_struct_conn.h  mmcif_struct_conn.pyi  mmcif_struct_conn_lib.cc  mmcif_struct_conn_pybind.cc  mmcif_struct_conn_pybind.h  mmcif_utils.pyi  mmcif_utils_pybind.cc  (+4 more)
src/alphafold3/test_data/: featurised_example.json  model_config.json
(+14 files in other folders)
